# check-please

./: .dockerignore  .env.example  .gitignore  Dockerfile  HOSTILE_AUDIT_REPORT.md  LICENSE  README.md  agent_api.py  check_please  desktop_app.py  easy_mode.py  help_system.py  install-desktop.sh  k8s.yaml  openapi.yaml  organize_env.py  pyproject.toml  quick_start_guide.py  simple_cli.py  simple_web.py  start.sh  tui.py  tui.tcss  user_friendly_errors.py
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/check_please/: project-state.md
credential_auditor/: __init__.py  __main__.py  audit_log.py  cache.py  models.py  orchestrator.py  output.py  security.py  self_test.py
credential_auditor/providers/: __init__.py  anthropic_p.py  cerebras_p.py  deepseek_p.py  github_p.py  google_p.py  groq_p.py  huggingface_p.py  mistral_p.py  nvidia_p.py  openai_p.py  openrouter_p.py  sendgrid_p.py  slack_p.py  stripe_p.py  together_p.py  twilio_p.py
desktop/: check-please.desktop
tests/: test_agent_modes.py  test_models.py  test_providers.py
