[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "check-please"
dynamic = ["version"]
description = "Credential audit pipeline — validates API keys against live provider endpoints"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "donovan" }]
keywords = ["credentials", "api-keys", "audit", "security", "dotenv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
tui = ["textual>=0.80"]
dev = ["pytest>=8.0", "mypy>=1.10"]

[project.urls]
Homepage = "https://github.com/Senpai-Sama7/check-please"
Issues = "https://github.com/Senpai-Sama7/check-please/issues"

[project.scripts]
check-please = "credential_auditor.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "credential_auditor.__version__"}

[tool.setuptools.packages.find]
include = ["credential_auditor*"]

[tool.setuptools.package-data]
credential_auditor = ["py.typed"]
